# tamo

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
browser-extension/: README.ja.md  README.md  background.js  manifest.json  popup.html  popup.js
browser-extension/_locales/en/: messages.json
browser-extension/_locales/ja/: messages.json
browser-extension/content/: fab.js  generic.js  lib.js  main.js
browser-extension/content/sites/: chatgpt.js  claude.js  gemini.js
docs/: ARCHITECTURE.ja.md  ARCHITECTURE.md  TECH_STACK.ja.md  TECH_STACK.md  TUTORIAL.ja.md  TUTORIAL.md  VERIFICATION.ja.md  VERIFICATION.md
docs/ja/: ARCHITECTURE.md  README.md  TECH_STACK.md  TUTORIAL.md  VERIFICATION.md  browser-extension.md
scripts/: make_icons.py
tamo/: __init__.py  cas.py  cli.py  config.py  derive.py  http_inbox.py  i18n.py  mcp_server.py  optimize.py  probe.py  recall.py  redact.py  schema.py  store.py  textract.py  util.py
tamo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tamo/adapters/: __init__.py  aider.py  claude_code.py  codex_cli.py  cursor_ide.py  generic_jsonl.py  inbox.py
tests/: bench.py  conftest.py  make_attachment_fixtures.py  make_fixtures.py  test_cas.py  test_docs_links.py  test_e2e.py  test_encoding.py  test_http_inbox.py  test_i18n.py  test_inbox.py  test_lock.py  test_mcp.py  test_probe.py  test_redact.py  test_retention.py  test_store.py
