[project]
name = "tamo"
version = "0.1.0"
description = "Deterministic cross-agent context harvester (Claude Code / Cursor / Codex CLI / browser) with CAS blob store and MCP serving"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []  # 収集系は標準ライブラリのみ

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2"]
media = ["pillow"]
pdf = ["pypdf>=4"]  # 日本語PDFのテキスト抽出品質が上がる（無くても動く）

[project.scripts]
tamo = "tamo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tamo*"]
